@@ -203,8 +203,8 @@ class LDAPDirectory(BaseDirectory):
         - Keys with empty values are removed.
         - Keys with value '*' search for an existing field.
         """
-        schema = self._getSchemas()[0]
-        all_field_ids = schema.keys()
+        schema = self._getUniqueSchema()
+        all_field_ids = self._getSchemasKeys()
         # Find attrs needed to compute returned fields.
         attrsd, return_fields = self._getSearchFields(return_fields)
         attrs = attrsd.keys()
@@ -347,7 +347,7 @@ class LDAPDirectory(BaseDirectory):
     def _getAdapterForPartialData(self, attrs):
         """Get an adapter for partial data."""
         dir = self
-        schema = self._getSchemas()[0]
+        schema = self._getUniqueSchema()
         adapter = LDAPStorageAdapter(schema, None, dir, field_ids=attrs)
         return adapter
 
@@ -362,7 +362,7 @@ class LDAPDirectory(BaseDirectory):
     def _makeAttrsFromData(self, data, ignore_attrs=[], keep_empty=0):
         # Make attributes. Skip ignore_attrs.
         attrs = {}
-        for field_id, field in self._getSchemas()[0].items(): # XXX
+        for field_id, field in self._getSchemasFields():
             if field.write_ignore_storage:
                 continue
             if field_id in ('dn', 'base_dn'):
