@@ -6,6 +6,7 @@ New features:
 - updated Brazilian Portuguese translations (Thanks to Mario Olimpio de Menezes
   <mario [at] curiango.ipen.br>)
 - LDAPBackingDirectory supports a ldap_base_creation property that specifies, whithin a SUBTREE ldap scope, under which base the entries will be created
+- Directories supports several schema definitions (including search schemas).
 Bug fixes:
 ~~~~~~~~~~
 - Fix to prevent access by anonymous user to getEntry method.
